--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <span>博客用到的demo，平常练习的demo,存放在此</span>
+                <span>Demo展示</span>
             </div>
             <div class="main-demo clearfix">
                 <div class="demo-item">
