--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
                         <p>阅读文章或者列表时，滑动到底部再加载数据条</p>
                     </a>
                 </div>
+                <div class="demo-item">
+                    <a href="src/html/preViewBigImg.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/preview.jpg" alt="">
+                        <h2>点击查看(预览)大图(PC端)</h2>
+                        <p>主要技术：Jquery</p>
+                        <p>功能：图片垂直居中显示、点击左半部分按钮切换上一张、点击左半部分按钮切换下一张、点击关闭按钮关闭</p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
