--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <img src="http://oiukswkar.bkt.clouddn.com/preview.jpg" alt="">
                         <h2>点击查看(预览)大图(PC端)</h2>
                         <p>主要技术：Jquery</p>
-                        <p>功能：图片垂直居中显示、点击左半部分按钮切换上一张、点击左半部分按钮切换下一张、点击关闭按钮关闭</p>
+                        <p>适用: 一篇文章不连续图片(特定大容器容器内图片)</p>
                     </a>
                 </div>
             </div>
