--- a/src/html/preViewBigImg.html
+++ b/src/html/preViewBigImg.html
@@ -13,17 +13,17 @@
                 <li class="con-item">
                     <h2>小A</h2>
                     <p>好激动啊.....</p>
-                    <img src="../img/03.png" alt="">
+                    <img src="http://oj7j5nuxv.bkt.clouddn.com/preview-01.png" alt="">
                 </li>
                 <li class="con-item">
                     <h2>小A</h2>
                     <p>好激动啊.....</p>
-                    <img src="../img/06.png" alt="">
+                    <img src="http://oj7j5nuxv.bkt.clouddn.com/preview-02.png" alt="">
                 </li>
                 <li class="con-item">
                     <h2>小A</h2>
                     <p>好激动啊.....</p>
-                    <img src="../img/01.png" alt="">
+                    <img src="http://oj7j5nuxv.bkt.clouddn.com/preview-03.png" alt="">
                 </li>
             </ul>
         </div>
