--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     line-height: 60px;
                 }
                 .demo-item{
-                    width: 122px !important;
+                    float: none !important;
+                    width: 85% !important;
+                    margin: 0 auto 15px !important;
                 }
             }
             .main-demo{
