--- a/src/html/preViewBigImg.html
+++ b/src/html/preViewBigImg.html
@@ -8,7 +8,11 @@
         <title></title>
     </head>
     <body>
+
         <div class="container">
+            <div class="source" style="margin-left:15px;padding-top:20px">
+                <a href="https://github.com/BiYuqi/demo.source/blob/master/src/html/preViewBigImg.html">源代码地址</a>
+            </div>
             <ul>
                 <li class="con-item">
                     <h2>小A</h2>
