--- a/index.html
+++ b/index.html
@@ -103,6 +103,14 @@
                         <p>适用: 一篇文章不连续图片(特定大容器容器内图片)</p>
                     </a>
                 </div>
+                <div class="demo-item">
+                    <a href="src/html/slideshow.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/slide-show.jpg" alt="">
+                        <h2>无缝滚动轮播插件</h2>
+                        <p>主要技术：Jquery</p>
+                        <p>依照结构,快速实现轮播，配置灵活</p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
