--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </a>
                 </div>
                 <div class="demo-item">
-                    <a href="src/html/slideshow.html">
+                    <a href="src/html/slideShow.html">
                         <img src="http://oiukswkar.bkt.clouddn.com/slide-show.jpg" alt="">
                         <h2>无缝滚动轮播插件</h2>
                         <p>主要技术：Jquery</p>
