--- a/src/html/slideShow.html
+++ b/src/html/slideShow.html
@@ -137,7 +137,8 @@
                     time:3000,//轮播时间间隔
                     imgWidth:1200,//图片宽度 or 图片所在容器宽度
                     imgHeight:450,//图片高度 or 图片所在容器高度
-                    isFlag:false //false 为自动轮播
+                    isFlag:false, //false 为自动轮播
+                    mobileBtn:true//打开PC端按钮点击 hover事件
                 })
                 box.init();
 
