--- a/src/html/slideShow.html
+++ b/src/html/slideShow.html
@@ -37,7 +37,7 @@
         }
         .ss-item{
             float: left;
-            width: 1000px;
+            width: 100%;
             overflow: hidden;
         }
         .ss-item img{
