--- a/src/html/slideShow.html
+++ b/src/html/slideShow.html
@@ -19,7 +19,7 @@
             overflow: hidden;
         }
         .ss-wrapper{
-            width: 1000px;
+            width: 100%;
             margin: 0 auto;
             height:564px;
             overflow: hidden;
