--- a/src/html/slideShow.html
+++ b/src/html/slideShow.html
@@ -21,7 +21,7 @@
         .ss-wrapper{
             width: 100%;
             margin: 0 auto;
-            height:564px;
+            /*height:564px;*/
             overflow: hidden;
             position: relative;
         }
