--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
                         <p>依照结构,快速实现轮播，配置灵活</p>
                     </a>
                 </div>
+                <div class="demo-item">
+                    <a href="src/html/url.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/url.jpg" alt="">
+                        <h2>url之GET请求拼接参数</h2>
+                        <p>主要技术：原生js</p>
+                        <p>方便快速得到请求参数</p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
