--- a/src/html/url.html
+++ b/src/html/url.html
@@ -70,6 +70,7 @@
     </head>
     <body>
         <h2 style="text-align:center;padding:10px 20px;">url之GET请求拼接参数</h2>
+        <p style="text-align:center;padding:4px 20px 8px;">支持模糊匹配，即传参为空,自动过滤</p>
         <div class="output">
             <span class="hook"></span>
             <p id="url-text"><span id="url-text-inner"></span></p>
