--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
                         <p>方便快速得到请求参数</p>
                     </a>
                 </div>
+                <div class="demo-item">
+                    <a href="src/html/oninput.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/weibo.jpg" alt="">
+                        <h2>仿微博提示可输入剩余字数</h2>
+                        <p>主要技术：原生js</p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
