--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
                         <p>主要技术：原生js</p>
                     </a>
                 </div>
+                <div class="demo-item">
+                    <a href="src/html/letToUper.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/letter.jpg" alt="">
+                        <h2>正则匹配字符串英文首字母小写转大写</h2>
+                        <p>主要技术：原生js</p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
