--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             }
             .demo-item{
                 width: 200px;
-                min-height: 260px;
+                height: 280px;
                 padding-bottom: 5px;
                 -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
                 -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -130,6 +130,13 @@
                     <a href="src/html/letToUper.html">
                         <img src="http://oiukswkar.bkt.clouddn.com/letter.jpg" alt="">
                         <h2>正则匹配字符串英文首字母小写转大写</h2>
+                        <p>主要技术：原生js</p>
+                    </a>
+                </div>
+                <div class="demo-item">
+                    <a href="src/html/deleteModal.html">
+                        <img src="http://oiukswkar.bkt.clouddn.com/coding.jpg" alt="">
+                        <h2>美化删除操作之回调函数</h2>
                         <p>主要技术：原生js</p>
                     </a>
                 </div>
