--- a/src/html/deleteModal.html
+++ b/src/html/deleteModal.html
@@ -205,53 +205,18 @@
                 }
 
                 //兼容forEach 实现jquery each
-                function each( obj, callback, args ) {
-            		var value,
-            			i = 0,
-            			length = obj.length,
-            			isArray = true;
-
-            		if ( args ) {
-            			if ( isArray ) {
-            				for ( ; i < length; i++ ) {
-            					value = callback.apply( obj[ i ], args );
-
-            					if ( value === false ) {
-            						break;
-            					}
-            				}
-            			} else {
-            				for ( i in obj ) {
-            					value = callback.apply( obj[ i ], args );
-
-            					if ( value === false ) {
-            						break;
-            					}
-            				}
-            			}
-
-            		// A special, fast, case for the most common use of each
-            		} else {
-            			if ( isArray ) {
-            				for ( ; i < length; i++ ) {
-            					value = callback.call( obj[ i ], i, obj[ i ] );
-
-            					if ( value === false ) {
-            						break;
-            					}
-            				}
-            			} else {
-            				for ( i in obj ) {
-            					value = callback.call( obj[ i ], i, obj[ i ] );
-
-            					if ( value === false ) {
-            						break;
-            					}
-            				}
-            			}
-            		}
-            		return obj;
-            	}
+                function each(obj,callback){
+                    var i = 0,
+                        value,
+                        len = obj.length;
+                    for(var i=0 ;i<len;i++){
+                        value = callback.call( this, i, obj[ i ] );
+                        if ( value === false ) {
+                            break;
+                        }
+                    }
+                    return obj;
+                }
             })()
 
         </script>
