--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
                 width: 100%;
                 height: 100%;
                 background-color: #F7F7FC;
+                box-sizing: border-box;
+            }
+            *{
+                box-sizing: border-box;
             }
             .container{
                 width: 100%;
@@ -23,18 +27,7 @@
                 font-size: 20px;
                 background-color: #31AAE8;
             }
-            @media screen and (max-width: 1080px) {
-                .header{
-                    font-size: 14px;
-                    height: 60px;
-                    line-height: 60px;
-                }
-                .demo-item{
-                    float: none !important;
-                    width: 85% !important;
-                    margin: 0 auto 15px !important;
-                }
-            }
+
             .main-demo{
                 padding: 15px 20px;
             }
@@ -61,8 +54,7 @@
             }
             .demo-item a img{
                 width:100%;
-                height: auto;
-                min-height: 160px;
+                height: 160px;
             }
             .demo-item a h2{
                 color: #4d6dad;
@@ -78,6 +70,35 @@
                 padding: 0 8px;
                 font-size: 14px;
                 word-wrap:break-word;
+            }
+            @media screen and (max-width: 1080px) {
+                .header{
+                    font-size: 18px;
+                    height: 60px;
+                    line-height: 60px;
+                }
+                .demo-item{
+                    float: none !important;
+                    width: 98% !important;
+                    margin: 0 auto 15px !important;
+                    height: 120px;
+                    padding-top: 10px;
+
+                }
+                .demo-item a{
+                    padding-left: 90px;
+                    padding-right: 10px;
+                    position: relative;
+                }
+                .demo-item a img{
+                    position: absolute;
+                    top: 10px;
+                    left: 15px;
+                    /*transform: translateY(-50%);*/
+                    display:block;
+                    width: 70px !important;
+                    max-height: 70px !important;
+                }
             }
         </style>
     </head>
@@ -100,7 +121,7 @@
                         <img src="http://oiukswkar.bkt.clouddn.com/preview.jpg" alt="">
                         <h2>点击查看(预览)大图(PC端)</h2>
                         <p>主要技术：Jquery</p>
-                        <p>适用: 一篇文章不连续图片(特定大容器容器内图片)</p>
+                        <p>适用不连续图片</p>
                     </a>
                 </div>
                 <div class="demo-item">
@@ -138,6 +159,7 @@
                         <img src="http://oiukswkar.bkt.clouddn.com/coding.jpg" alt="">
                         <h2>美化删除操作之回调函数</h2>
                         <p>主要技术：原生js</p>
+                        <p>提升用户体验，易于操作</p>
                     </a>
                 </div>
             </div>
