--- a/src/html/deleteModal.html
+++ b/src/html/deleteModal.html
@@ -118,7 +118,7 @@
                     v.onclick = function(){
                         //调用自己的模态插件
                         SuperModal({
-                            flag:true,
+                            isFlag:true,
                             modalTips:"确定要删除吗?",
                             tarFun:function(){
                                 v.remove();
