--- a/index.html
+++ b/index.html
@@ -25,80 +25,99 @@
                 text-align: center;
                 color: #fff;
                 font-size: 20px;
-                background-color: #31AAE8;
+                background-color: #144E59;
+                box-shadow: 1px 1px 4px 2px #001520;
             }
-
             .main-demo{
-                padding: 15px 20px;
+                width: 1128px;
+                margin: 20px auto;
+            }
+            .main-demo ul{
+                list-style: none;
+                float: left;
+                width: 250px;
+                margin:5px 16px;
             }
             .demo-item{
-                width: 200px;
-                height: 280px;
-                padding-bottom: 5px;
-                -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-                -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-                box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-                transition: all .3s;
-                float: left;
-                margin-right: 15px;
                 margin-bottom: 15px;
+                border:1px solid #ddd;
+                padding: 15px;
+                transition: all .5s;
+                background-color: #fff;
             }
             .demo-item:hover{
-                box-shadow: 0 2px 20px -1px rgba(0, 0, 0, 0.6);
-                cursor: pointer;
+                box-shadow: 1px 1px 6px 2px #ccc;
+                transform: translate3d(0,-4px,0);
             }
             .demo-item a{
-                width: 100%;
-                height: 100%;
-                display: inline-block;
-            }
-            .demo-item a img{
-                width:100%;
-                height: 160px;
+                display: block;
             }
             .demo-item a h2{
                 color: #4d6dad;
-                padding: 4px 8px;
-                margin: 0 auto;
+                margin: 8px auto;
                 font-weight: bold;
                 font-size: 18px;
-                word-wrap:break-word;/*换行*/
+                word-wrap: break-word;
             }
             .demo-item a p{
                 color: #333;
-                margin: 0 auto;
-                padding: 0 8px;
+                margin: 8px auto;
                 font-size: 14px;
-                word-wrap:break-word;
+                word-wrap: break-word;
+            }
+            .demo-item a img{
+                width: 100%;
+                display: block;
             }
             @media screen and (max-width: 1080px) {
                 .header{
                     font-size: 18px;
+                    width: 100%;
                     height: 60px;
                     line-height: 60px;
                 }
+                .main-demo{
+                    width: 100%;
+                    margin: 10px auto;
+                }
+                .main-demo ul{
+                    list-style: none;
+                    float: left;
+                    width: 22%;
+                    margin:1.5%;
+                }
                 .demo-item{
-                    float: none !important;
-                    width: 98% !important;
-                    margin: 0 auto 15px !important;
-                    height: 120px;
-                    padding-top: 10px;
-
+                    margin-bottom: 10px;
+                    border:1px solid #ddd;
+                    padding: 4px;
+                    transition: all .5s;
+                    background-color: #fff;
+                }
+                .demo-item:hover{
+                    box-shadow: 1px 1px 6px 2px #ccc;
+                    transform: translate3d(0,-4px,0);
                 }
                 .demo-item a{
-                    padding-left: 90px;
-                    padding-right: 10px;
-                    position: relative;
+                    display: block;
+                }
+                .demo-item a h2{
+                    color: #4d6dad;
+                    margin: 8px auto;
+                    font-weight: bold;
+                    font-size: 12px;
+                    word-wrap: break-word;
+                }
+                .demo-item a p{
+                    color: #333;
+                    /*margin: 8px auto;*/
+                    font-size: 10px;
+                    word-wrap: break-word;
                 }
                 .demo-item a img{
-                    position: absolute;
-                    top: 10px;
-                    left: 15px;
-                    /*transform: translateY(-50%);*/
-                    display:block;
-                    width: 70px !important;
-                    max-height: 70px !important;
+                    width: 100%;
+                    display: block;
                 }
+
             }
         </style>
     </head>
@@ -108,6 +127,10 @@
                 <span>Demo展示</span>
             </div>
             <div class="main-demo clearfix">
+                <ul class="box"></ul>
+                <ul class="box"></ul>
+                <ul class="box"></ul>
+                <ul class="box"></ul>
             </div>
         </div>
         <script src="src/lib/index.js"></script>
@@ -118,10 +141,13 @@
                 boolType:true,
                 dataType:"JSON",
                 success:function(data){
-                    console.log(data.length);
+
                     var str = '';
+                    var allUl = document.querySelectorAll('ul');
                     for(var i = 0;i < data.length;i++){
-                            str += '<div class="demo-item">'
+
+                            var div = document.createElement('div');
+                            str = '<div class="demo-item">'
                                 +    '<a href="'+data[i].url+'">'
                                 +        '<img src="'+data[i].img+'" alt="">'
                                 +        '<h2>'+data[i].name+'</h2>'
@@ -129,9 +155,19 @@
                                 +        '<p>'+data[i].main+'</p>'
                                 +    '</a>'
                                 +    '</div>';
+
+                            div.innerHTML = str;
+                            var minHeightUl = allUl[0];
+
+                            for(var j=0;j<allUl.length;j++){
+                                if(minHeightUl.offsetHeight > allUl[j].offsetHeight){
+                                    minHeightUl = allUl[j];
+                                }
+                            }
+                            minHeightUl.appendChild(div);
                     }
-                    var mainDemo = document.querySelector('.main-demo');
-                    mainDemo.innerHTML = str;
+                    // var mainDemo = document.querySelector('.main-demo');
+                    // mainDemo.innerHTML = str;
                 },
                 error:function(error){
                     console.log(error);
